--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BookwrmStarter</title>
+    <title>Bookwrm</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= favicon_link_tag 'favicon.png' %>
@@ -15,6 +15,13 @@
     <div class="navigation">
       <%= image_tag('logo.svg', class: 'logo') %>
       <nav>
+        <%= link_to 'Authors', authors_path %>
+        <% if current_user.present? %>
+          <%= link_to 'My Account', edit_user_registration_path(current_user) %>
+          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to 'Sign In', new_user_session_path %>
+        <% end %>
       </nav>
     </div>
     <%= yield %>
